# fuser

./: .gitignore  README.md  affine.py  analyze.py  annotation.py  cli.py  config.toml  dataset.py  download.py  epochs.py  event.py  main.py  ontology.py  plot.py  process.py  progress.py  progress_rich.py  pyproject.toml  read_scan.py  registration.py  roi.txt  scan.py  schema.py  utils.py
.github/workflows/: publish.yml
fuser/: __init__.py  affine.py  annotation.py  array.py  download.py  drift.py  event.py  glm.py  mask.py  ontology.py  plot.py  qc.py  registration.py  roi.py  scan.py
scripts/: make_figure.py
src/fuser/: __init__.py  drift.py  event.py  glm.py  interpolate.py  io.py  ontology.py  paths.py  roi.py
