[project]
name = "fus-process"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pynrrd>=1.1",
    "matplotlib>=3.10",
    "scikit-image>=0.26",
    "requests>=2.32",
    "h5py>=3.16",
    "polars[pandas]>=1.39",
    "seaborn>=0.13",
    "statannotations>=0.7",
    "rich>=14.3",
    "platformdirs>=4.9",
]

[project.optional-dependencies]
dev = [
    "ruff"
]
