[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fuser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pynrrd>=1.1",
    "matplotlib>=3.10",
    "scikit-image>=0.26",
    "requests>=2.32",
    "h5py>=3.16",
    "seaborn>=0.13",
    "statannotations>=0.7",
    "platformdirs>=4.9",
]
authors = [
    { name = "Xun Yuan", email = "yuanxun2000@outlook.com" },
]

[project.optional-dependencies]
dev = [
    "ruff"
]
