[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fuser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pynrrd>=1.1",
    "matplotlib>=3.10",
    "scikit-image>=0.26",
    "requests>=2.32",
    "h5py>=3.16",
    "polars[pandas]>=1.39",
    "seaborn>=0.13",
    "statannotations>=0.7",
    "platformdirs>=4.9",
]
authors = [
    { name = "Xun Yuan", email = "yuanxun2000@outlook.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/yuanxun-yx/fuser"
Issues = "https://github.com/yuanxun-yx/fuser/issues"

[project.optional-dependencies]
dev = [
    "ruff"
]
